--- a/front-end/src/pages/login/login.scss
+++ b/front-end/src/pages/login/login.scss
@@ -1,4 +1,14 @@
 .login{
+    position: relative;
+    background: #234762;
+    background-image: url(../../assets/images/bg01.jpg);
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
     .login-header{
         position: relative;
         display: flex;
@@ -7,7 +17,7 @@
         justify-content: flex-start;
         align-items: center;
         box-shadow: 0 0 3em rgb(0 0 0);
-        height: auto;
+        height: 7.5rem;
         width: 100%;
         margin: 0;
         padding: 0;
@@ -17,9 +27,20 @@
             align-items: center;
             justify-content: flex-start;
             img {
-                width: 676px;
-                height: 183px;
+                width: 14.77rem;
+                height: 4rem;
                 margin: 0 15px 0 50px;
+              }
+              h1{
+                display: block;
+                margin-left: 3rem;
+                font-size: .8em;
+                line-height: 100%;
+                font-weight: bold;
+                white-space: nowrap;
+                text-transform: uppercase;
+                color: rgba(255, 255, 255, .7);
+                letter-spacing: .2em;
               }
         }
     
