--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -1,10 +1,10 @@
+@import "~bootstrap/scss/bootstrap";
 body {
   margin: 0;
   box-sizing: border-box;
   font-family: 'WesFy', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 1rem;
 }
 
 code {
