--- a/front-end/src/components/login/login.scss
+++ b/front-end/src/components/login/login.scss
@@ -73,6 +73,12 @@
                 margin-right: 3rem;
             }
         }
+        .submitButton{
+            width: 8rem;
+            display: table;
+            margin: 0 auto;
+            margin-top: 2rem;
+        }
     }
 
 
