--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -1,4 +1,9 @@
+$nav-link-color:#adb5bd ;
 @import "~bootstrap/scss/bootstrap";
+
+  
+
+
 body {
   margin: 0;
   box-sizing: border-box;
@@ -10,4 +15,12 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a,
+a:hover,
+a:focus {
+  color: inherit;
+  text-decoration: none;
+  transition: all 0.2s;
 }
