update download logic

--- a/front-end/src/components/search/searchContent/searchDetail/searchElement.scss
+++ b/front-end/src/components/search/searchContent/searchDetail/searchElement.scss
@@ -4,6 +4,9 @@
         margin: 1rem auto;
         border: #dee2e6 1px solid;
         .accordion-header{
+            .icon{
+                width : 3rem;
+            }
             .accordion-button{
                 .energy{
                     margin-left: auto;
