--- a/front-end/src/components/search/searchContent/searchDetail/searchElement.scss
+++ b/front-end/src/components/search/searchContent/searchDetail/searchElement.scss
@@ -5,7 +5,16 @@
         border: #dee2e6 1px solid;
         .accordion-header{
             .icon{
-                width : 3rem;
+                border: solid 1px #313b4c;
+                border-radius: 50%;
+                width : 1rem;
+                height: 1rem;
+                padding: 0.3rem;
+                margin-right: 1rem;
+                &:hover{
+                    background-color: #313b4c;
+                    color: #fff ;
+                }
             }
             .accordion-button{
                 .energy{
