--- a/front-end/src/components/search/searchPage.scss
+++ b/front-end/src/components/search/searchPage.scss
@@ -53,6 +53,14 @@
             .button {
                 width: 6rem;
             }
+            .btn-outline-primary{
+                color: #313b4c;
+                border-color:#313b4c;
+                &:hover{
+                    background-color: #313b4c;
+                    color: #fff;
+                }
+            }
         }
 
         .element {
@@ -61,15 +69,24 @@
             margin: 1rem;
             line-height: 2rem;
             border-radius: 0.5rem;
-
+            padding: 0.4rem 0.5rem;
             .minus {
-                width: 1rem;
-                height: 100%;
+
                 margin-right: 1rem;
                 margin-left: 1rem;
                 margin-top: auto;
                 margin-bottom: auto;
                 cursor: pointer;
+                border: solid 1px #313b4c;
+                border-radius: 50%;
+                width : 1rem;
+                height: 1rem;
+                padding: 0.3rem;
+                margin-right: 1rem;
+                &:hover{
+                    background-color: #313b4c;
+                    color: #fff ;
+                }
             }
         }
     }
