--- a/front-end/src/components/admin/navbar/navbar.scss
+++ b/front-end/src/components/admin/navbar/navbar.scss
@@ -1,8 +1,9 @@
+@use "../../../style/color.scss" as c;
 .navbar {
     .container {
         width: 100%;
         .navbar-collapse {
-            border-bottom: #ccc 1px solid;
+            border-bottom: c.$color-light 1px solid;
             padding: 0.5rem ;
             .nav-item {
                 margin-left: auto;
