--- a/front-end/src/components/admin/sidebar/sidebar.scss
+++ b/front-end/src/components/admin/sidebar/sidebar.scss
@@ -1,3 +1,4 @@
+@use "../../../style/color.scss" as c;
 .sidebar {
     svg{
         width: 16px;
@@ -12,7 +13,7 @@
     .sidebar-header {
         
         padding: 1.5rem 2rem;
-        background: #313b4c;
+        background: c.$color-main;
         color: #adb5bd;
         text-align: center;
         h3{
@@ -35,7 +36,7 @@
             margin: 0.3rem;
 
             :hover {
-                background: #313b4c;
+                background: c.$color-main;
                 color: #fff;
                 transition: .2s;
             }
