--- a/front-end/src/components/search/searchContent/searchDetail/searchElement.scss
+++ b/front-end/src/components/search/searchContent/searchDetail/searchElement.scss
@@ -1,3 +1,4 @@
+@use "../../../../style/color.scss" as c;
 .accordion{
     .accordion-item{
         width:80rem;
@@ -5,14 +6,14 @@
         border: #dee2e6 1px solid;
         .accordion-header{
             .icon{
-                border: solid 1px #313b4c;
+                border: solid 1px c.$color-main;
                 border-radius: 50%;
                 width : 1rem;
                 height: 1rem;
                 padding: 0.3rem;
                 margin-right: 1rem;
                 &:hover{
-                    background-color: #313b4c;
+                    background-color: c.$color-main;
                     color: #fff ;
                 }
             }
